2001-07-09  Phil Edwards  <pme@sources.redhat.com>

	* docs/html/explanations.html:  New file.
	* docs/html/configopts.html:  Link to it to provide more notes
	on cstdio.  Minor markup and spacing fixes.
	* docs/html/27_io/howto.html:  Talk about sync_with_stdio.

2001-07-09  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	* include/bits/valarray_meta.h (_Expr::operator+): Use qualified id
	for _Expr template template argument.
	(_Expr::operator-): Likewise.
	(_Expr::operator~): Likewise.
	(_Expr::operator!): Likewise.
	(_DEFINE_EXPR_UNARY_OPERATOR): Likewise.

2001-07-06  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

        * libmath/Makefile.am (EXTRA_DIST): Remove atan2f.c and expf.c
        * libmath/Makefile.in: Regenerate.
        * libmath/expf.c: Remove.
        * libmath/atan2f.c: Likewise.

2001-07-06  Daniel Jacobowitz  <drow@mvista.com>

        * configure.in: Remove NATIVE, NULL_TARGET.
        Set CANADIAN only for Canadian crosses.  Set xcompiling
        for both Canadian crosses and host-x-host crosses.
        * configure: Regenerated.

2001-07-06  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

        * include/bits/stl_vector.h (vector::_M_initialize_aux): Fix typo.

2001-07-05  Jason Merrill  <jason_merrill@redhat.com>

	* testsuite_flags.in (--build-includes): backward, not backwards.

2001-07-04  Jeffrey Oldham  <oldham@codesourcery.com>

	* include/ext/ropeimpl.h (_Rope_RopeRep::_M_free_c_string):
	Replace destroy by _Destroy.
	(_Rope_RopeRep::_S_free_string): Likewise.
	(rope::c_str()): Likewise.
	* include/ext/slist (_Slist_base::_M_erase_after>): Likewise.
	(_Slist_base::_M_erase_after): Likewise.
	(slist::_M_create_node): Replace construct by _Construct.
	(slist::pop_front): Replace destroy by _Destroy.
	* include/ext/stl_hashtable.h (hashtable::_M_new_node): Replace
	construct by _Construct.
	(hashtable::_M_delete_node): Replace destroy by _Destroy.
	* include/ext/stl_rope.h (rope::rope): Replace construct by