@@ -7,7 +7,7 @@
    <META NAME="GENERATOR" CONTENT="vi and eight fingers">
    <TITLE>libstdc++-v3 configure options</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: configopts.html,v 1.10 2001/04/20 08:59:25 bkoz Exp $ -->
+<!-- $Id: configopts.html,v 1.11 2001/07/09 19:37:01 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -71,7 +71,7 @@ options</A></H1>
      </P>
 
  <DT><TT>--enable-sjlj-exceptions  </TT>
- <DD><P>Forces old, short-jump/long-jump exception handling model.  If
+ <DD><P>Forces old, set-jump/long-jump exception handling model.  If
         at all possible, the new, frame unwinding exception handling routines
         should be used instead, as they significantly reduce both runtime
         memory usage and executable size.
@@ -211,7 +211,7 @@ options</A></H1>
 
 <HR>
 <P CLASS="fineprint"><EM>
-$Id: configopts.html,v 1.10 2001/04/20 08:59:25 bkoz Exp $
+$Id: configopts.html,v 1.11 2001/07/09 19:37:01 pme Exp $
 </EM></P>
 
 
